Flex Reference Applications v1.4.1
* Update Flex SDK dependency to v2.5.0

--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,16 @@
 project('flex-reference-applications',
   'c',
-  version: '1.4.0',
+  version: '1.4.1',
   meson_version: '>=0.61.2',
   default_options: [
     'c_std=gnu99',
     'warning_level=2',
     'werror=true',
     'buildtype=minsize',
+    'b_staticpic=false',
+    'b_asneeded=false',
+    'b_lto=true',
+    'b_lto_mode=default',
  ]
 )
 
